<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg6">

    <Button
        android:id="@+id/setting_button_done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_button_done"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <SeekBar
        android:id="@+id/setting_seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="271dp"
        android:layout_height="91dp"
        android:max="5"
        android:progress="3"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/setting_text1"
        android:layout_width="354dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/setting_text1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/setting_text2"
        android:layout_width="355dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/setting_text2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/setting_level"
        android:layout_width="186dp"
        android:layout_height="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819">

        <RadioButton
            android:id="@+id/setting_easy"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_rb_easy"
            android:textColor="@color/DarkGreen"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/setting_normal"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_rb_normal"
            android:textColor="@color/DarkGreen"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/setting_hard"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_rb_hard"
            android:textColor="@color/DarkGreen"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/setting_number"
        android:layout_width="91dp"
        android:layout_height="26dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="184dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/DarkGreen"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>