<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:visibility="visible">

    <Button
        android:id="@+id/game_button_startagain"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="448dp"
        android:text="@string/game_button_startagain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game_button_main"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="448dp"
        android:text="@string/game_button_main"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_score"
        android:layout_width="256dp"
        android:layout_height="47dp"
        android:text="@string/game_score"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="27dp" />

    <TextView
        android:id="@+id/game_message"
        android:layout_width="335dp"
        android:layout_height="102dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/game_message"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/game_buttons"
        android:layout_width="342dp"
        android:layout_height="302dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="144dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".GameActivity">


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>